Bug 407485 - "Thumbnail Aside" does not work in fullscreen mode and without titlebar
Summary: "Thumbnail Aside" does not work in fullscreen mode and without titlebar
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D21224
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-13 08:44 UTC by Csaba Kertész
Modified: 2024-06-07 16:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
vlad.zahorodnii: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Kertész 2019-05-13 08:44:33 UTC
SUMMARY
"Thumbnail Aside" plugin works if a window has titlebar and it is not fullscreen.

STEPS TO REPRODUCE
1. Enable "Thumbnail Aside" plugin.
2. Go to a window and enable the thumbnail with the shortcut of the plugin.
3. Either make the window fullscreen or use the KWin shortcut to "Hide Window Border".


OBSERVED RESULT
The thumbnail disappears.

EXPECTED RESULT
The thumbnail should not disappear.

SOFTWARE/OS VERSIONS
Linux: Ubuntu 18.04
KDE Plasma Version: 5.12.7
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION
A use case: put a Youtube video fullscreen on a virtual desktop, make a thumbnail then move to an other virtual desktop do other tasks.
Comment 1 Vlad Zahorodnii 2019-05-15 09:35:11 UTC
Git commit d94eb29d07c8e5720a99956dc53df4f254774664 by Vlad Zagorodniy.
Committed on 15/05/2019 at 09:35.
Pushed by vladz into branch 'master'.

[effects/thumbnailaside] Specify screen projection matrix

Summary:
The Lanczos filter is applied to thumbnails, so we need to specify screen
projection matrix in order to properly project window coordinates into
screen-space.

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D21224

M  +6    -2    effects/thumbnailaside/thumbnailaside.cpp

https://commits.kde.org/kwin/d94eb29d07c8e5720a99956dc53df4f254774664
Comment 2 Csaba Kertész 2019-05-15 16:41:43 UTC
I can confirm that the committed fix works on my local Ubuntu after patching, recompiling, installing and restarting KWin.

Can I close this bug or it is tied to CI somehow?
Comment 3 Vlad Zahorodnii 2019-05-15 17:05:46 UTC
It's already resolved so no need to close.
Comment 4 Csaba Kertész 2019-05-15 17:06:56 UTC
Ok! Thank you for your awesome quick fix!
Comment 5 Hyuk 2022-06-28 12:31:19 UTC
(In reply to Vlad Zahorodnii from comment #3)
> It's already resolved so no need to close.

I'm having similar issue with this effect since 5.25. When I play youtube in fullscreen and enable this effect before minimizing the window, it used to play the streaming flawlessly up until 5.24 but now it looks like it only updates the video thumbnail when either mouse is hovered over a panel or virtual desktop is switching constantly. Is this a known bug? This kwin effect was one of my favorite since I like playing youtube in the background while working. I really miss this feature and hope KDE will bring it back soon. Thanks
Comment 6 Zamundaaa 2024-06-07 16:00:44 UTC
(In reply to Hyuk from comment #5)
> I'm having similar issue with this effect since 5.25. When I play youtube in
> fullscreen and enable this effect before minimizing the window, it used to
> play the streaming flawlessly up until 5.24 but now it looks like it only
> updates the video thumbnail when either mouse is hovered over a panel or
> virtual desktop is switching constantly. Is this a known bug? This kwin
> effect was one of my favorite since I like playing youtube in the background
> while working. I really miss this feature and hope KDE will bring it back
> soon. Thanks

That's an unrelated bug, but also fixed in Plasma 6